# aoc2021

./: CMakeLists.txt  README.md  helpers.h
puzzle_day_1/: CMakeLists.txt  README.md  main.cpp
puzzle_day_10/: CMakeLists.txt  main.cpp
puzzle_day_11/: CMakeLists.txt  Simulator.cpp  Simulator.h  main.cpp
puzzle_day_13/: CMakeLists.txt  Folder.cpp  Folder.h  main.cpp
puzzle_day_14/: CMakeLists.txt  PolymerCalculator.cpp  PolymerCalculator.h  main.cpp
puzzle_day_16/: CMakeLists.txt  OperatorPacket.cpp  OperatorPacket.h  Packet.cpp  Packet.h  ParserHelpers.cpp  ParserHelpers.h  main.cpp
puzzle_day_17/: CMakeLists.txt  TrajectoryCalculator.cpp  TrajectoryCalculator.h  main.cpp
puzzle_day_2/: CMakeLists.txt  main.cpp
puzzle_day_3/: CMakeLists.txt  main.cpp
puzzle_day_4/: Board.cpp  Board.h  CMakeLists.txt  main.cpp
puzzle_day_5/: CMakeLists.txt  main.cpp
puzzle_day_6/: CMakeLists.txt  Simulator.cpp  Simulator.h  main.cpp
puzzle_day_7/: CMakeLists.txt  main.cpp
puzzle_day_8/: CMakeLists.txt  Decoder.cpp  Decoder.h  main.cpp
puzzle_day_9/: CMakeLists.txt  HeightMap.cpp  HeightMap.h  main.cpp
